@@ -27,7 +27,6 @@ import java.util.Map;
 import java.util.Optional;
 import java.util.Properties;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.mybatis.generator.config.Context;
@@ -221,7 +220,7 @@ public abstract class IntrospectedTable {
     public List<IntrospectedColumn> getAllColumns() {
         return Stream.of(primaryKeyColumns.stream(), baseColumns.stream(), blobColumns.stream())
                 .flatMap(Function.identity())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -232,7 +231,7 @@ public abstract class IntrospectedTable {
     public List<IntrospectedColumn> getNonBLOBColumns() {
         return Stream.of(primaryKeyColumns.stream(), baseColumns.stream())
                 .flatMap(Function.identity())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public int getNonBLOBColumnCount() {
@@ -242,7 +241,7 @@ public abstract class IntrospectedTable {
     public List<IntrospectedColumn> getNonPrimaryKeyColumns() {
         return Stream.of(baseColumns.stream(), blobColumns.stream())
                 .flatMap(Function.identity())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<IntrospectedColumn> getBLOBColumns() {
@@ -918,7 +917,7 @@ public abstract class IntrospectedTable {
 
     /**
      * This method should return the number of progress messages that will be
-     * send during the generation phase.
+     * sent during the generation phase.
      *
      * @return the number of progress messages
      */
